[project]
name = "handbook"
version = "0.1.0"
description = "Change Tracker of the Church of Jesus Christ General Handbook"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["markdownify<1.0", "requests>=2.32.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pre-commit>=3.5.0"]
